# llm-night-watch

./: .gitignore  README.md  deploy.sh  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.ts
backend/: .env.template  main.py
src/: App.tsx  api.ts  extractionUtils.ts  styles.css  types.ts
src/components/: AppHeader.tsx  ConfigTab.tsx  ExtractionRunSection.tsx  ManualRequestTab.tsx  RequestsTab.tsx  ResponseFormatBuilder.tsx
src/components/ui/: button.tsx
tests/: test_proxy.py
